feat: complete P0 P1 backend APIs for frontend rebuild